widget: Fix regex matches not always being recognized

https://bugzilla.gnome.org/show_bug.cgi?id=754949
(cherry picked from commit 1c703aaefa44f88ca50e210fcb0265f2b65851b9)